--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>spring-boot-mybatis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-mybatis</name>
-    <description>Demo project for Spring Boot</description>
+<!--    <description>Demo project for Spring Boot</description>-->
 
     <properties>
         <java.version>1.8</java.version>
@@ -48,6 +48,11 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
