--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8085
 
+spring.datasource.url= jdbc:mysql://localhost:3306/qqqqq?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=21040408
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.type-aliases-package=com.qq.entity
+mybatis.mapper-locations=classpath:mapping/*.xml
