springboot+mybatis+mybatisgenerator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=21040408
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.type-aliases-package=com.mybatisGenerator.springboot.Entry
-mybatis.mapper-locations=classpath:com/mybatisGenerator/springboot/mappers/*.xml
+mybatis.mapper-locations=classpath*:com/mybatisGenerator/springboot/mappers/*.xml
